# ddgs_search_skill

./: .gitignore  README.md  pyproject.toml
tests/: test_ddgs_search.py  test_main.py
