[project]
name = "ddgs-search"
version = "0.1.0"
description = "DuckDuckGo Web Search Agent Skill"
requires-python = ">=3.9"
dependencies = [
    "ddgs>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
ddgs-search = "scripts.ddgs_search:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
pythonpath = ["skills/ddgs-search"]
